// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add users 1`] = `
<DocumentFragment>
  <div>
    <div>
      count: 
      <span
        data-testid="count"
      >
        0
      </span>
    </div>
    <div>
      <span
        data-testid="username"
      >
        yetone1
      </span>
      <span
        data-testid="age"
      >
        23
      </span>
    </div>
    <ul>
      <li
        date-testid="user-0"
      >
        <span
          date-testid="user-0-name"
        >
          a
        </span>
        <span
          date-testid="user-0-age"
        >
          1
        </span>
      </li>
      <li
        date-testid="user-1"
      >
        <span
          date-testid="user-1-name"
        >
          b
        </span>
        <span
          date-testid="user-1-age"
        >
          2
        </span>
      </li>
      <li
        date-testid="user-2"
      >
        <span
          date-testid="user-2-name"
        >
          yetone
        </span>
        <span
          date-testid="user-2-age"
        >
          21
        </span>
      </li>
      <li
        date-testid="user-3"
      >
        <span
          date-testid="user-3-name"
        >
          yetone1
        </span>
        <span
          date-testid="user-3-age"
        >
          23
        </span>
      </li>
    </ul>
    <div>
      <button>
        increment
      </button>
      <button>
        decrement
      </button>
    </div>
    <div>
      <input
        data-testid="username-ipt"
        type="text"
        value="yetone1"
      />
      <input
        data-testid="age-ipt"
        type="number"
        value="23"
      />
      <button
        data-testid="add-user-btn"
      >
        Add
      </button>
    </div>
    <div>
      <button
        data-testid="user-btn-0"
      >
        Increase a's age
      </button>
      <button
        data-testid="user-btn-1"
      >
        Increase b's age
      </button>
      <button
        data-testid="user-btn-2"
      >
        Increase yetone's age
      </button>
      <button
        data-testid="user-btn-3"
      >
        Increase yetone1's age
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`add users 2`] = `
<DocumentFragment>
  <div>
    <div>
      count: 
      <span
        data-testid="count"
      >
        0
      </span>
    </div>
    <div>
      <span
        data-testid="username"
      >
        yetone1
      </span>
      <span
        data-testid="age"
      >
        23
      </span>
    </div>
    <ul>
      <li
        date-testid="user-0"
      >
        <span
          date-testid="user-0-name"
        >
          a
        </span>
        <span
          date-testid="user-0-age"
        >
          2
        </span>
      </li>
      <li
        date-testid="user-1"
      >
        <span
          date-testid="user-1-name"
        >
          b
        </span>
        <span
          date-testid="user-1-age"
        >
          4
        </span>
      </li>
      <li
        date-testid="user-2"
      >
        <span
          date-testid="user-2-name"
        >
          yetone
        </span>
        <span
          date-testid="user-2-age"
        >
          24
        </span>
      </li>
      <li
        date-testid="user-3"
      >
        <span
          date-testid="user-3-name"
        >
          yetone1
        </span>
        <span
          date-testid="user-3-age"
        >
          27
        </span>
      </li>
    </ul>
    <div>
      <button>
        increment
      </button>
      <button>
        decrement
      </button>
    </div>
    <div>
      <input
        data-testid="username-ipt"
        type="text"
        value="yetone1"
      />
      <input
        data-testid="age-ipt"
        type="number"
        value="23"
      />
      <button
        data-testid="add-user-btn"
      >
        Add
      </button>
    </div>
    <div>
      <button
        data-testid="user-btn-0"
      >
        Increase a's age
      </button>
      <button
        data-testid="user-btn-1"
      >
        Increase b's age
      </button>
      <button
        data-testid="user-btn-2"
      >
        Increase yetone's age
      </button>
      <button
        data-testid="user-btn-3"
      >
        Increase yetone1's age
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`change user 1`] = `
<DocumentFragment>
  <div>
    <div>
      count: 
      <span
        data-testid="count"
      >
        0
      </span>
    </div>
    <div>
      <span
        data-testid="username"
      >
        yetone
      </span>
      <span
        data-testid="age"
      >
        21
      </span>
    </div>
    <ul>
      <li
        date-testid="user-0"
      >
        <span
          date-testid="user-0-name"
        >
          a
        </span>
        <span
          date-testid="user-0-age"
        >
          1
        </span>
      </li>
      <li
        date-testid="user-1"
      >
        <span
          date-testid="user-1-name"
        >
          b
        </span>
        <span
          date-testid="user-1-age"
        >
          2
        </span>
      </li>
    </ul>
    <div>
      <button>
        increment
      </button>
      <button>
        decrement
      </button>
    </div>
    <div>
      <input
        data-testid="username-ipt"
        type="text"
        value="yetone"
      />
      <input
        data-testid="age-ipt"
        type="number"
        value="21"
      />
      <button
        data-testid="add-user-btn"
      >
        Add
      </button>
    </div>
    <div>
      <button
        data-testid="user-btn-0"
      >
        Increase a's age
      </button>
      <button
        data-testid="user-btn-1"
      >
        Increase b's age
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`increment and decrement 1`] = `
<DocumentFragment>
  <div>
    <div>
      count: 
      <span
        data-testid="count"
      >
        3
      </span>
    </div>
    <div>
      <span
        data-testid="username"
      />
      <span
        data-testid="age"
      >
        0
      </span>
    </div>
    <ul>
      <li
        date-testid="user-0"
      >
        <span
          date-testid="user-0-name"
        >
          a
        </span>
        <span
          date-testid="user-0-age"
        >
          1
        </span>
      </li>
      <li
        date-testid="user-1"
      >
        <span
          date-testid="user-1-name"
        >
          b
        </span>
        <span
          date-testid="user-1-age"
        >
          2
        </span>
      </li>
    </ul>
    <div>
      <button>
        increment
      </button>
      <button>
        decrement
      </button>
    </div>
    <div>
      <input
        data-testid="username-ipt"
        type="text"
        value=""
      />
      <input
        data-testid="age-ipt"
        type="number"
        value="0"
      />
      <button
        data-testid="add-user-btn"
      >
        Add
      </button>
    </div>
    <div>
      <button
        data-testid="user-btn-0"
      >
        Increase a's age
      </button>
      <button
        data-testid="user-btn-1"
      >
        Increase b's age
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`increment and decrement 2`] = `
<DocumentFragment>
  <div>
    <div>
      count: 
      <span
        data-testid="count"
      >
        0
      </span>
    </div>
    <div>
      <span
        data-testid="username"
      />
      <span
        data-testid="age"
      >
        0
      </span>
    </div>
    <ul>
      <li
        date-testid="user-0"
      >
        <span
          date-testid="user-0-name"
        >
          a
        </span>
        <span
          date-testid="user-0-age"
        >
          1
        </span>
      </li>
      <li
        date-testid="user-1"
      >
        <span
          date-testid="user-1-name"
        >
          b
        </span>
        <span
          date-testid="user-1-age"
        >
          2
        </span>
      </li>
    </ul>
    <div>
      <button>
        increment
      </button>
      <button>
        decrement
      </button>
    </div>
    <div>
      <input
        data-testid="username-ipt"
        type="text"
        value=""
      />
      <input
        data-testid="age-ipt"
        type="number"
        value="0"
      />
      <button
        data-testid="add-user-btn"
      >
        Add
      </button>
    </div>
    <div>
      <button
        data-testid="user-btn-0"
      >
        Increase a's age
      </button>
      <button
        data-testid="user-btn-1"
      >
        Increase b's age
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly 1`] = `
<DocumentFragment>
  <div>
    <div>
      count: 
      <span
        data-testid="count"
      >
        0
      </span>
    </div>
    <div>
      <span
        data-testid="username"
      />
      <span
        data-testid="age"
      >
        0
      </span>
    </div>
    <ul>
      <li
        date-testid="user-0"
      >
        <span
          date-testid="user-0-name"
        >
          a
        </span>
        <span
          date-testid="user-0-age"
        >
          1
        </span>
      </li>
      <li
        date-testid="user-1"
      >
        <span
          date-testid="user-1-name"
        >
          b
        </span>
        <span
          date-testid="user-1-age"
        >
          2
        </span>
      </li>
    </ul>
    <div>
      <button>
        increment
      </button>
      <button>
        decrement
      </button>
    </div>
    <div>
      <input
        data-testid="username-ipt"
        type="text"
        value=""
      />
      <input
        data-testid="age-ipt"
        type="number"
        value="0"
      />
      <button
        data-testid="add-user-btn"
      >
        Add
      </button>
    </div>
    <div>
      <button
        data-testid="user-btn-0"
      >
        Increase a's age
      </button>
      <button
        data-testid="user-btn-1"
      >
        Increase b's age
      </button>
    </div>
  </div>
</DocumentFragment>
`;
